; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/bluetooth/rfcomm/extr_tty.c_rfcomm_dev_put.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/bluetooth/rfcomm/extr_tty.c_rfcomm_dev_put.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rfcomm_dev = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rfcomm_dev*)* @rfcomm_dev_put to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rfcomm_dev_put(%struct.rfcomm_dev* %0) #0 {
  %2 = alloca %struct.rfcomm_dev*, align 8
  store %struct.rfcomm_dev* %0, %struct.rfcomm_dev** %2, align 8
  %3 = load %struct.rfcomm_dev*, %struct.rfcomm_dev** %2, align 8
  %4 = getelementptr inbounds %struct.rfcomm_dev, %struct.rfcomm_dev* %3, i32 0, i32 0
  %5 = call i64 @atomic_dec_and_test(i32* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load %struct.rfcomm_dev*, %struct.rfcomm_dev** %2, align 8
  %9 = call i32 @rfcomm_dev_destruct(%struct.rfcomm_dev* %8)
  br label %10

10:                                               ; preds = %7, %1
  ret void
}

declare dso_local i64 @atomic_dec_and_test(i32*) #1

declare dso_local i32 @rfcomm_dev_destruct(%struct.rfcomm_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
